# rofi-keys

./: .clippy.toml  Cargo.toml  LICENSE  README.md
src/: main.rs
